# repoctx

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.codex/: config.toml
.github/workflows/: publish-pypi.yml
contracts/: repoctx-protocol.md
docs/: experiment-mcp-suppression.md
docs/man/: repoctx.1
docs/plans/: 2026-03-17-mcp-repo-resolution-design.md  2026-03-17-mcp-repo-resolution.md  2026-03-17-packaging-build-check-design.md  2026-03-17-packaging-build-check.md  2026-03-17-pypi-publishing-design.md  2026-03-17-pypi-publishing.md  2026-03-17-readme-developer-onboarding-design.md  2026-03-17-readme-developer-onboarding.md  2026-03-17-telemetry-design.md  2026-03-17-telemetry.md  2026-03-18-experiment-mode-design.md  2026-04-23-repoctx-v2-design.md
repoctx/: __init__.py  __main__.py  _build_channel.py  advisory.py  autoprovision.py  chunker.py  config.py  config_loader.py  context_pack.py  core.py  embeddings.py  eval.py  experiment.py  experiment_mcp.py  feedback_log.py  git_state.py  git_tree.py  graph.py  hooks.py  index_consent.py  index_location.py  main.py  mcp_server.py  models.py  overlay.py  reaper.py  record.py  reporting.py  retriever.py  scanner.py  stats.py  subkinds.py  symbols.py  telemetry.py  tune.py  vector_index.py
repoctx/adapters/: __init__.py  registry.py  repo.py
repoctx/authority/: __init__.py  constraints.py  discovery.py  extract.py  graph.py  markers.py  propose.py  records.py  scaffold.py
repoctx/bundle/: __init__.py  assembler.py  recall.py  renderer.py  schema.py
repoctx/commands/: __init__.py  eval.py  experiment.py  hook.py  index.py  install.py  protocol_ops.py  provision.py  query.py  reap.py  reporting.py  stats.py  tune.py
repoctx/harness/: __init__.py  claude_code.py  codex.py  cursor.py
repoctx/ops/: __init__.py  mark_used.py  semantic_search.py
repoctx/protocol/: __init__.py  authority_op.py  bundle_op.py  (+5 more)
scripts/: cloud-setup.sh  ensure-repoctx.sh  release.py  repoctx-py.sh
server/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
tests/: conftest.py  test_advisory.py  test_authority_discovery.py  test_authority_extract.py  test_authority_graph.py  test_authority_markers.py  test_authority_scaffold.py  test_autoprovision.py  test_base_index.py  test_bundle_assembler.py  test_bundle_renderer.py  test_chunker.py  test_config_loader.py  test_context_pack.py  test_core.py  test_embeddings.py  test_embeddings_queue.py  test_eval.py  test_experiment.py  test_experiment_mcp.py  test_feedback_log.py  test_git_tree.py  test_graph.py  test_harness_claude_code.py  test_harness_other.py  test_hooks.py  test_hooks_tool_use.py  test_hybrid_retrieval.py  test_index_consent.py  test_index_location.py  test_layout.py  test_main.py  test_mark_used_op.py  test_mcp_server.py  test_mock_artifact_adapter.py  test_overlay.py  test_packaging.py  test_protocol_ops.py  test_protocol_ops_cli_telemetry.py  test_protocol_telemetry.py  (+17 more)
(+3 files in other folders)
