[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoctx"
version = "0.1.0"
description = "Local repository intelligence for coding agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
mcp = [
  "mcp>=1.6,<1.7",
]
dev = [
  "build",
  "mcp>=1.6,<1.7",
  "pytest>=8.0.0",
]

[project.scripts]
repoctx = "repoctx.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
