[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repoctx-mcp"
version = "1.0.1"
description = "Local repository intelligence for coding agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  {name = "Gal"},
]
license = "MIT"
keywords = ["developer-tools", "repository-analysis", "mcp", "coding-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.6,<1.7",
]

[project.urls]
Homepage = "https://github.com/gald33/repoctx"
Repository = "https://github.com/gald33/repoctx"
Issues = "https://github.com/gald33/repoctx/issues"

[project.optional-dependencies]
mcp = [
  "mcp>=1.6,<1.7",
]
embeddings = [
  "sentence-transformers>=3.0.0",
  "numpy>=1.24.0",
  "tree-sitter>=0.23",
  "tree-sitter-language-pack>=0.7",
]
dev = [
  "build",
  "numpy>=1.24.0",
  "pytest>=8.0.0",
]

[project.scripts]
repoctx = "repoctx.main:main"

[tool.setuptools.packages.find]
include = ["repoctx*"]

[tool.setuptools.data-files]
"share/man/man1" = ["docs/man/repoctx.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
